--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Viseron</title>
+    <title>SytVision</title>
     <meta charset="utf-8" />
     <meta
       name="description"
-      content="Viseron - self-hosted, local only NVR."
+      content="Condition Monitoring NVR."
     />
     <meta name="google" content="notranslate" />
     <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
